# hs-circt

./: CMakeLists.txt
docs/Dialects/Xlnx/: FDCE.md  FDxE.md  LUT.md  Mux.md  RationaleXlnx.md  Xlnx.md  _index.md
include/circt/: InitAllDialects.h
include/circt/Conversion/: CombToNetlist.h  CoreDSPMapping.h  CoreMemoryMapping.h  CoreToXlnx.h  HWToNetlist.h  Passes.h  Passes.td  SeqToXlnx.h  XlnxToHW.h
include/circt/Dialect/: CMakeLists.txt
include/circt/Dialect/Gtech/: CMakeLists.txt  Gtech.td  GtechDialect.h  GtechOps.h  (+1 more)
include/circt/Synthesis/: CombToNetlist.h
lib/Conversion/: CMakeLists.txt
lib/Conversion/CombToNetlist/: CMakeLists.txt  CombToNetlist.cpp
lib/Conversion/CoreDSPMapping/: CMakeLists.txt  CoreDSPMapping.cpp
lib/Conversion/CoreMemoryMapping/: CMakeLists.txt  CoreMemoryMapping.cpp
lib/Conversion/CoreToXlnx/: CMakeLists.txt  CoreToXlnx.cpp
lib/Conversion/HWToNetlist/: CMakeLists.txt  HWToNetlist.cpp
lib/Conversion/SeqToXlnx/: CMakeLists.txt  SeqToXlnx.cpp
lib/Conversion/XlnxToHW/: CMakeLists.txt  XlnxToHW.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Gtech/: CMakeLists.txt  GtechDialect.cpp  GtechOps.cpp
lib/Dialect/VFC/: CMakeLists.txt  VFCDialect.cpp  VFCOps.cpp
lib/Dialect/Xlnx/: CMakeLists.txt  XlnxDialect.cpp  XlnxOps.cpp
test/Conversion/CombToNetlist/: comb-to-netlist.mlir
test/Conversion/ConvertAroundXlnx/: difftest.sh  prim_cell_lib.v  seq-to-xlnx.mlir  tb.sv  xlnx-to-hw.mlir
test/Conversion/CoreDSPMapping/: adder.mlir  divider.mlir  multipler.mlir
test/Conversion/CoreMemoryMapping/: test.mlir
test/Conversion/CoreToXlnx/: double-reg.mlir
test/Conversion/XlnxToSV/: reg_and_lut.mlir
test/Dialect/Gtech/: basic.mlir
test/Dialect/VFC/: basic.mlir  canonicalization.mlir  errors.mlir  ops.mlir
test/Dialect/Xlnx/: fdce.mlir  fdce_region.mlir  fdpe.mlir  fdre.mlir  fdse.mlir  lut1to6.mlir  lutn.mlir  mux.mlir
tools/: CMakeLists.txt
tools/circt-logic-syn/: CMakeLists.txt  circt-logic-syn.cpp
tools/circt-synth/: circt-synth.cpp
unittests/: CMakeLists.txt
unittests/Dialect/: CMakeLists.txt
unittests/Dialect/Xlnx/: CMakeLists.txt  FDCEBuilderTest.cpp  FDPEBuilderTest.cpp  FDREBuilderTest.cpp  FDSEBuilderTest.cpp  Lut1to6BuilderTest.cpp  LutBuilderTest.cpp  LutNBuilderTest.cpp  MuxBuilderTest.cpp  XlnxTestUtils.cpp  XlnxTestUtils.h
unittests/Memory/: main.cpp  main_tb.v  run_tb.sh
unittests/Synthesis/: CMakeLists.txt  CombToLutTest.cpp
(+15 files in other folders)
